# ChangeLog for dev-ruby/treetop
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/treetop/ChangeLog,v 1.41 2013/01/16 00:15:13 zerochaos Exp $

  16 Jan 2013; Rick Farina <zerochaos@gentoo.org> treetop-1.4.10-r1.ebuild,
  treetop-1.4.10.ebuild:
  adding ~arm keywords to net-analyzer/metasploit rdeps

  23 Sep 2012; Hans de Graaff <graaff@gentoo.org> -treetop-1.4.9.ebuild:
  Cleanup.

  10 Aug 2012; Hans de Graaff <graaff@gentoo.org> treetop-1.4.10-r1.ebuild:
  Add untested ppc keyword to fix rails dependency tree.

  01 Aug 2012; Hans de Graaff <graaff@gentoo.org> treetop-1.4.10-r1.ebuild:
  Fix specs broken with newer rspec, fixing bug 429352.

  01 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org>
  -files/treetop-1.4.7-fix-tmpdir.patch, treetop-1.4.10-r1.ebuild:
  Move to use the new framework for rspec handling. This does not fix tests but
  at least simplifies the testing part. Also remove unused file.

  01 May 2012; Raúl Porcel <armin76@gentoo.org> treetop-1.4.9.ebuild,
  treetop-1.4.10.ebuild:
  Drop ia64/sparc keywords

  11 Mar 2012; Brent Baude <ranger@gentoo.org> treetop-1.4.10-r1.ebuild:
  Marking treetop-1.4.10-r1 ~ppc64 for bug 396547

  31 Dec 2011; Fabian Groffen <grobian@gentoo.org> treetop-1.4.10-r1.ebuild:
  Add Prefix keywords, bug #396547

*treetop-1.4.10-r1 (31 Dec 2011)

  31 Dec 2011; Hans de Graaff <graaff@gentoo.org> treetop-1.4.10.ebuild,
  +treetop-1.4.10-r1.ebuild:
  Create revision bump and add ruby19 only there. Drop keywords due to lack of
  activesupport with ruby19, bug 396043.

  26 Dec 2011; Hans de Graaff <graaff@gentoo.org> treetop-1.4.10.ebuild:
  Add ruby19. Fixes bug 293350.

  09 Sep 2011; Fabian Groffen <grobian@gentoo.org> treetop-1.4.10.ebuild:
  Marked ~sparc-solaris

  31 Jul 2011; Raúl Porcel <armin76@gentoo.org> treetop-1.4.9.ebuild,
  treetop-1.4.10.ebuild:
  Add ~ia64

*treetop-1.4.10 (28 Jul 2011)
