@@ -1,0 +1,38 @@
+# Copyright 1999-2013 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/treetop/treetop-1.4.14.ebuild,v 1.1 2013/06/23 07:36:45 graaff Exp $
+
+EAPI=5
+
+# jruby fails tests, not investigated yet.
+USE_RUBY="ruby18 ruby19"
+
+RUBY_FAKEGEM_RECIPE_TEST="rspec"
+RUBY_FAKEGEM_TASK_DOC=""
+RUBY_FAKEGEM_DOCDIR="doc"
+RUBY_FAKEGEM_EXTRADOC="README.md"
+
+inherit ruby-fakegem
+
+DESCRIPTION="Treetop is a language for describing languages."
+HOMEPAGE="http://treetop.rubyforge.org/"
+LICENSE="Ruby"
+
+KEYWORDS="~amd64 ~arm ~ppc ~ppc64 ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
+SLOT="0"
+IUSE=""
+
+ruby_add_bdepend "test? ( >=dev-ruby/rr-0.10.2 dev-ruby/activesupport )"
+ruby_add_rdepend ">=dev-ruby/polyglot-0.3.1"
+
+all_ruby_prepare() {
+	# Use a ruby18 compatible regexp, already fixed upstream.
+	sed -i -e 's/\[:\^space:\]/\^[:space:]/' spec/compiler/character_class_spec.rb || die
+}
+
+all_ruby_install() {
+	all_fakegem_install
+
+	insinto /usr/share/doc/${PF}/examples
+	doins -r examples/*
+}
