@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/treetop
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/treetop/ChangeLog,v 1.41 2013/01/16 00:15:13 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/treetop/ChangeLog,v 1.42 2013/06/23 07:36:45 graaff Exp $
+
+*treetop-1.4.14 (23 Jun 2013)
+
+  23 Jun 2013; Hans de Graaff <graaff@gentoo.org> +treetop-1.4.14.ebuild:
+  Version bump.
 
   16 Jan 2013; Rick Farina <zerochaos@gentoo.org> treetop-1.4.10-r1.ebuild,
   treetop-1.4.10.ebuild:
